# smash-ultimate-api

./: .gitignore  LICENSE  README.md  config.py  constants.py  main.py  middleware.py  pyproject.toml  render.yaml  tags.py  utils.py  vercel.json
.github/workflows/: pytest.yml
api/: index.py
data/: items.json  roster_slots copy.json  roster_slots.json  roster_slots_tipless.json  stages.json
models/: roster_slots.py
routers/: fighters.py  items.py  roster_slots.py  stages.py
schemas/: fighters.py  items.py  roster_slots.py  shared.py  stages.py
scripts/: download_figther_images.py  download_item_images.py  download_stage_images.py  item_scraper.py  stage_order.txt  stage_scraper.py  tips.txt  update_images_path.py  update_tips copy.py  update_tips.py
services/: base.py  items.py  roster_slots.py  stages.py
tests/: test_main.py  test_root.py
tests/fighters/: test_router.py
tests/items/: test_data_integrity.py  test_router.py  test_service.py
tests/roster_slots/: test_data_integrity.py  test_roster_slot_router.py  test_roster_slot_service.py  test_router.py  test_service.py
tests/stages/: test_data_integrity.py  test_router.py  test_service.py
utils/: loader.py
