[project]
name = "smash-ultimate-api"
version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "pytest>=9.0.2",
    "python-slugify>=8.0.4",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."
testpaths = ["tests"]
