[project]
name = "smash-ultimate-api"
version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "python-slugify>=8.0.4",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."
testpaths = ["tests"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
]

[project.scripts]
app = "main:app"

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]
